kustomize/base/django-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
  namespace: django-app
spec:
  # replicas: 1 PATCH
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django
          # image: ghcr.io/nba-dev-org/django-app:latest PATCH
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
