kustomize/base/django-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  namespace: django-app
spec:
  selector:
    app: django-app
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
